--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <nav>
         <ul>
           <li><a href="index.html">Studio</a></li>
-          <li><a href="portofolio.html">Portofolio</a></li>
+          <li><a href="portfolio.html">Portofolio</a></li>
           <li><a href="contacts.html">Contacts</a></li>
         </ul>
       </nav>
@@ -26,8 +26,8 @@
       </ul>
     </header>
     <main>
-        <h1>EFFECTIVE SOLUTIONS FOR YOU BUSINESS</h1>
-        <button type="button">Request our service</button>
+      <h1>EFFECTIVE SOLUTIONS FOR YOU BUSINESS</h1>
+      <button type="button">Request our service</button>
       <section>
         <dl>
           <dt>ATTENTION TO DETAILS</dt>
