Marcaj HTML Tema 2

--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portofolio</title>
+    <title>Portfolio</title>
   </head>
   <body>
     <header>
@@ -12,7 +12,7 @@
       <nav>
         <ul>
           <li><a href="index.html">Studio</a></li>
-          <li><a href="portfolio.html">Portofolio</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
           <li><a href="contacts.html">Contacts</a></li>
         </ul>
       </nav>
@@ -35,65 +35,49 @@
       </ul>
       <ul>
         <li>
-          <img
-            src="images/portfolio/web_site_01.jpg"
-            alt="Web-site"
-            width="370"
-          />
-          <h3>Technoduck</h3>
-          <p>Web-site</p>
+            <img src="images/portfolio/web_site_01.jpg" alt="Technoduck portfolio">
+            <h3>Technoduck</h3>
+            <p>Web-site</p>
         </li>
         <li>
-          <img
-            src="images/portfolio/marketing_01.jpg"
-            alt="Marketing"
-            width="370"
-          />
-          <h3>Project Prime</h3>
-          <p>Marketing</p>
+            <img src="images/portfolio/design_01.jpg" alt="Design portfolio">
+            <h3>Poster New Orlean vs Golden Star</h3>
+            <p>Design</p>
         </li>
         <li>
-          <img src="images/portfolio/design_01.jpg" alt="Design" width="370" />
-          <h3>Limited Edition</h3>
-          <p>Design</p>
+            <img src="images/portfolio/apps_01.jpg" alt="Apps portfolio">
+            <h3>Seafood Restaurant </h3>
+            <p>Apps</p>
         </li>
         <li>
-          <img src="images/portfolio/design_02.jpg" alt="Design" width="370" />
-          <h3>Poster New Orlean vs Golden Star</h3>
-          <p>Design</p>
+            <img src="images/portfolio/marketing_01.jpg" alt="Marketing portfolio">
+            <h3>Project Prime</h3>
+            <p>Marketing</p>
         </li>
         <li>
-          <img src="images/portfolio/apps_01.jpg" alt="Apps" width="370" />
-          <h3>Project Boxes</h3>
-          <p>Apps</p>
+            <img src="images/portfolio/apps_02.jpg" alt="Apps portfolio">
+            <h3>Project Boxes</h3>
+            <p>Apps</p>
         </li>
         <li>
-          <img
-            src="images/portfolio/marketing_02.jpg"
-            alt="Marketing"
-            width="370"
-          />
-          <h3>Project LAB</h3>
-          <p>Marketing</p>
+            <img src="images/portfolio/web_site_02.jpg" alt="Web-site portfolio">
+            <h3>Inspiration has no Borders</h3>
+            <p>Web-site</p>
         </li>
         <li>
-          <img src="images/portfolio/apps_02.jpg" alt="Apps" width="370" />
-          <h3>Seafood Restaurant</h3>
-          <p>Apps</p>
+            <img src="images/portfolio/design_02.jpg" alt="Design portfolio">
+            <h3>Limited Edition</h3>
+            <p>Design</p>
         </li>
         <li>
-          <img
-            src="images/portfolio/web_site_02.jpg"
-            alt="Web-site"
-            width="370"
-          />
-          <h3>Inspiration has no Borders</h3>
-          <p>Web-site</p>
+            <img src="images/portfolio/marketing_02.jpg" alt="Marketing portfolio">
+            <h3>Project LAB</h3>
+            <p>Marketing</p>
         </li>
         <li>
-          <img src="images/portfolio/apps_03.jpg" alt="Apps" width="370" />
-          <h3>Growing Business</h3>
-          <p>Apps</p>
+            <img src="images/portfolio/apps_03.jpg" alt="Apps portfolio">
+            <h3>Growing Business</h3>
+            <p>Apps</p>
         </li>
       </ul>
     </main>
