--- a/portfolio.html
+++ b/portfolio.html
@@ -35,47 +35,47 @@
       </ul>
       <ul>
         <li>
-            <img src="images/portfolio/web_site_01.jpg" alt="Technoduck portfolio">
+            <img src="images/portfolio/web_site_01.jpg" alt="Technoduck portfolio" width="370">
             <h3>Technoduck</h3>
             <p>Web-site</p>
         </li>
         <li>
-            <img src="images/portfolio/design_01.jpg" alt="Design portfolio">
+            <img src="images/portfolio/design_01.jpg" alt="Design portfolio" width="370">
             <h3>Poster New Orlean vs Golden Star</h3>
             <p>Design</p>
         </li>
         <li>
-            <img src="images/portfolio/apps_01.jpg" alt="Apps portfolio">
+            <img src="images/portfolio/apps_01.jpg" alt="Apps portfolio" width="370">
             <h3>Seafood Restaurant </h3>
             <p>Apps</p>
         </li>
         <li>
-            <img src="images/portfolio/marketing_01.jpg" alt="Marketing portfolio">
+            <img src="images/portfolio/marketing_01.jpg" alt="Marketing portfolio" width="370">
             <h3>Project Prime</h3>
             <p>Marketing</p>
         </li>
         <li>
-            <img src="images/portfolio/apps_02.jpg" alt="Apps portfolio">
+            <img src="images/portfolio/apps_02.jpg" alt="Apps portfolio" width="370">
             <h3>Project Boxes</h3>
             <p>Apps</p>
         </li>
         <li>
-            <img src="images/portfolio/web_site_02.jpg" alt="Web-site portfolio">
+            <img src="images/portfolio/web_site_02.jpg" alt="Web-site portfolio" width="370">
             <h3>Inspiration has no Borders</h3>
             <p>Web-site</p>
         </li>
         <li>
-            <img src="images/portfolio/design_02.jpg" alt="Design portfolio">
+            <img src="images/portfolio/design_02.jpg" alt="Design portfolio" width="370">
             <h3>Limited Edition</h3>
             <p>Design</p>
         </li>
         <li>
-            <img src="images/portfolio/marketing_02.jpg" alt="Marketing portfolio">
+            <img src="images/portfolio/marketing_02.jpg" alt="Marketing portfolio" width="370">
             <h3>Project LAB</h3>
             <p>Marketing</p>
         </li>
         <li>
-            <img src="images/portfolio/apps_03.jpg" alt="Apps portfolio">
+            <img src="images/portfolio/apps_03.jpg" alt="Apps portfolio" width="370">
             <h3>Growing Business</h3>
             <p>Apps</p>
         </li>
