--- a/index.html
+++ b/index.html
@@ -4,95 +4,101 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <title>Web Studio</title>
   </head>
   <body>
     <header>
-      <a href="index.html">WebStudio</a>
+      <a class="logo link" href="/">Web<span class="header-logo">Studio</span></a>
       <nav>
-        <ul>
-          <li><a href="index.html">Studio</a></li>
-          <li><a href="portfolio.html">Portofolio</a></li>
-          <li><a href="contacts.html">Contacts</a></li>
+        <ul class="unstyled-list">
+          <li><a class="nav-link link" href="index.html">Studio</a></li>
+          <li><a class="nav-link link" href="portfolio.html">Portofolio</a></li>
+          <li><a class="nav-link link" href="contacts.html">Contacts</a></li>
         </ul>
       </nav>
-      <ul>
+      <ul class="unstyled-list">
         <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a class="nav-contact link" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
         <li>
-          <a href="tel:+12127724150">+1 212-772-4150</a>
+          <a class="nav-contact link" href="tel:+12127724150">+1 212-772-4150</a>
         </li>
       </ul>
     </header>
     <main>
-      <h1>EFFECTIVE SOLUTIONS FOR YOU BUSINESS</h1>
-      <button type="button">Request our service</button>
+      <section class="hero-section">
+        <h1 class="hero-title">EFFECTIVE SOLUTIONS FOR YOU BUSINESS</h1>
+        <button class="hero-button" type="button">Request our service</button>
+      </section>
       <section>
         <dl>
-          <dt>ATTENTION TO DETAILS</dt>
-          <dd>
+          <dt class="description-title">ATTENTION TO DETAILS</dt>
+          <dd class="description-details">
             We go into all the details and processes of your business to develop
             a customized solution.
           </dd>
-          <dt>PUNCTUALITY</dt>
-          <dd>
+          <dt class="description-title">PUNCTUALITY</dt>
+          <dd class="description-details">
             With us, you can feel safe and secure. An important principle of the
             company: respect your time and deadlines.
           </dd>
-          <dt>PLANNING</dt>
-          <dd>
+          <dt class="description-title">PLANNING</dt>
+          <dd class="description-details">
             You will be able to observe and participate in every phase of
             solution development and implementation.
           </dd>
-          <dt>MODERN TECHNOLOGIES</dt>
-          <dd>
+          <dt class="description-title">MODERN TECHNOLOGIES</dt>
+          <dd class="description-details">
             We use innovative tools to solve assigned tasks. It's time to
             simplify work processes.
           </dd>
         </dl>
       </section>
       <section>
-        <h2>What we do</h2>
-        <ul>
+        <h2 class="subtitle">What we do</h2>
+        <ul class="unstyled-list">
           <li><img src="images/img.jpg" alt="laptop" width="370" /></li>
           <li><img src="images/img1.jpg" alt="telefon" width="370" /></li>
           <li><img src="images/img2.jpg" alt="tableta" width="370" /></li>
         </ul>
       </section>
-      <section>
-        <h2>Our Team</h2>
-        <ul>
+      <section class="team-section">
+        <h2 class="subtitle">Our Team</h2>
+        <ul class="unstyled-list">
           <li>
             <img src="images/team1.jpg" alt="Christopher Walker Photo" />
-            <h4>Christopher Walker</h4>
-            <p>Product Designer</p>
+            <h4 class="team-name">Christopher Walker</h4>
+            <p class="team-profession">Product Designer</p>
           </li>
           <li>
             <img src="images/team2.jpg" alt="Kylie Evans Photo" />
-            <h4>Kylie Evans</h4>
-            <p>Frontend Developer</p>
+            <h4 class="team-name">Kylie Evans</h4>
+            <p class="team-profession">Frontend Developer</p>
           </li>
           <li>
             <img src="images/team3.jpg" alt="Ryan Harris Photo" />
-            <h4>Ryan Harris</h4>
-            <p>Marketing</p>
+            <h4 class="team-name">Ryan Harris</h4>
+            <p class="team-profession">Marketing</p>
           </li>
           <li>
             <img src="images/team4.jpg" alt="Tyler Moore Photo" />
-            <h4>Tyler Moore</h4>
-            <p>UI Designer</p>
+            <h4 class="team-name">Tyler Moore</h4>
+            <p class="team-profession">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <footer>
-      <a href="index.html">WebStudio</a>
+      <a class="logo link" href="/">Web<span class="footer-logo">Studio</span></a>
       <address>
-        <ul>
-          <li><p>695 Park Ave, NY 10065, USA</p></li>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+12127724150">+1 212-772-4150</a></li>
+        <ul class="unstyled-list">
+          <li><p class="contact-address">695 Park Ave, NY 10065, USA</p></li>
+          <li><a class="contact-footer link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a class="contact-footer link" href="tel:+12127724150">+1 212-772-4150</a></li>
         </ul>
       </address>
     </footer>
