--- a/portfolio.html
+++ b/portfolio.html
@@ -4,90 +4,94 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <title>Portfolio</title>
   </head>
   <body>
     <header>
-      <a href="index.html">WebStudio</a>
+      <a class="logo link" href="/">Web<span class="header-logo">Studio</span></a>
       <nav>
-        <ul>
-          <li><a href="index.html">Studio</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="contacts.html">Contacts</a></li>
+        <ul class="unstyled-list">
+          <li><a class="nav-link link" href="index.html">Studio</a></li>
+          <li><a class="nav-link link" href="portfolio.html">Portofolio</a></li>
+          <li><a class="nav-link link" href="contacts.html">Contacts</a></li>
         </ul>
       </nav>
-      <ul>
+      <ul class="unstyled-list">
         <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a class="nav-contact link" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
         <li>
-          <a href="tel:+12127724150">+1 212-772-4150</a>
+          <a class="nav-contact link" href="tel:+12127724150">+1 212-772-4150</a>
         </li>
       </ul>
     </header>
     <main>
-      <ul>
-        <li><button type="button">All</button></li>
-        <li><button type="button">Web-sites</button></li>
-        <li><button type="button">Apps</button></li>
-        <li><button type="button">Design</button></li>
-        <li><button type="button">Marketing</button></li>
+      <ul class="unstyled-list">
+        <li><button class="project-examples" type="button">All</button></li>
+        <li><button class="project-examples" type="button">Web-sites</button></li>
+        <li><button class="project-examples" type="button">Apps</button></li>
+        <li><button class="project-examples" type="button">Design</button></li>
+        <li><button class="project-examples" type="button">Marketing</button></li>
       </ul>
-      <ul>
+      <ul class="unstyled-list">
         <li>
             <img src="images/portfolio/web_site_01.jpg" alt="Technoduck portfolio" width="370">
-            <h3>Technoduck</h3>
-            <p>Web-site</p>
+            <h3 class="project-list">Technoduck</h3>
+            <p class="project-profile">Web-site</p>
         </li>
         <li>
             <img src="images/portfolio/design_01.jpg" alt="Design portfolio" width="370">
-            <h3>Poster New Orlean vs Golden Star</h3>
-            <p>Design</p>
+            <h3 class="project-list">Poster New Orlean vs Golden Star</h3>
+            <p class="project-profile">Design</p>
         </li>
         <li>
             <img src="images/portfolio/apps_01.jpg" alt="Apps portfolio" width="370">
-            <h3>Seafood Restaurant </h3>
-            <p>Apps</p>
+            <h3 class="project-list">Seafood Restaurant </h3>
+            <p class="project-profile">Apps</p>
         </li>
         <li>
             <img src="images/portfolio/marketing_01.jpg" alt="Marketing portfolio" width="370">
-            <h3>Project Prime</h3>
-            <p>Marketing</p>
+            <h3 class="project-list">Project Prime</h3>
+            <p class="project-profile">Marketing</p>
         </li>
         <li>
             <img src="images/portfolio/apps_02.jpg" alt="Apps portfolio" width="370">
-            <h3>Project Boxes</h3>
-            <p>Apps</p>
+            <h3 class="project-list">Project Boxes</h3>
+            <p class="project-profile">Apps</p>
         </li>
         <li>
             <img src="images/portfolio/web_site_02.jpg" alt="Web-site portfolio" width="370">
-            <h3>Inspiration has no Borders</h3>
-            <p>Web-site</p>
+            <h3 class="project-list">Inspiration has no Borders</h3>
+            <p class="project-profile">Web-site</p>
         </li>
         <li>
             <img src="images/portfolio/design_02.jpg" alt="Design portfolio" width="370">
-            <h3>Limited Edition</h3>
-            <p>Design</p>
+            <h3 class="project-list">Limited Edition</h3>
+            <p class="project-profile">Design</p>
         </li>
         <li>
             <img src="images/portfolio/marketing_02.jpg" alt="Marketing portfolio" width="370">
-            <h3>Project LAB</h3>
-            <p>Marketing</p>
+            <h3 class="project-list">Project LAB</h3>
+            <p class="project-profile">Marketing</p>
         </li>
         <li>
             <img src="images/portfolio/apps_03.jpg" alt="Apps portfolio" width="370">
-            <h3>Growing Business</h3>
-            <p>Apps</p>
+            <h3 class="project-list">Growing Business</h3>
+            <p class="project-profile">Apps</p>
         </li>
       </ul>
     </main>
     <footer>
-      <a href="index.html">WebStudio</a>
+      <a class="logo link" href="/">Web<span class="footer-logo">Studio</span></a>
       <address>
-        <ul>
-          <li><p>695 Park Ave, NY 10065, USA</p></li>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+12127724150">+1 212-772-4150</a></li>
+        <ul class="unstyled-list">
+          <li><p class="contact-address">695 Park Ave, NY 10065, USA</p></li>
+          <li><a class="contact-footer link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a class="contact-footer link" href="tel:+12127724150">+1 212-772-4150</a></li>
         </ul>
       </address>
     </footer>
