Corectare linkuri de legatura

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
   </head>
   <body>
     <header>
-      <a class="logo link" href="/">Web<span class="header-logo">Studio</span></a>
+      <a class="logo link" href="index.html">Web<span class="header-logo">Studio</span></a>
       <nav>
         <ul class="unstyled-list">
-          <li><a class="nav-link link" href="index.html">Studio</a></li>
+          <li><a class="nav-link link" href="">Studio</a></li>
           <li><a class="nav-link link" href="portfolio.html">Portofolio</a></li>
-          <li><a class="nav-link link" href="contacts.html">Contacts</a></li>
+          <li><a class="nav-link link" href="">Contacts</a></li>
         </ul>
       </nav>
       <ul class="unstyled-list">
@@ -93,7 +93,7 @@
       </section>
     </main>
     <footer>
-      <a class="logo link" href="/">Web<span class="footer-logo">Studio</span></a>
+      <a class="logo link" href="index.html">Web<span class="footer-logo">Studio</span></a>
       <address>
         <ul class="unstyled-list">
           <li><p class="contact-address">695 Park Ave, NY 10065, USA</p></li>
