--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </header>
     <main>
       <section class="hero-section">
-        <h1 class="hero-title">EFFECTIVE SOLUTIONS FOR YOU BUSINESS</h1>
+        <h1 class="hero-title">EFFECTIVE SOLUTIONS FOR <br> YOU BUSINESS</h1>
         <button class="hero-button" type="button">Request our service</button>
       </section>
       <section>
